--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "openapi -i api-specs.json -o ./src --client axios --useOptions"
+    "build": "openapi -i openapi.specs.json -o ./src --client axios --useOptions"
   },
   "devDependencies": {
-    "openapi-typescript-codegen": "^0.23.0"
+    "openapi-typescript-codegen": "mb21/openapi-typescript-codegen#generate-custom"
+  },
+  "dependencies": {
+    "axios": "^1.1.3",
+    "openapi-typescript": "^5.4.1"
   }
 }
